changed to sqlalchemy

--- a/templates/card.j2.html
+++ b/templates/card.j2.html
@@ -8,7 +8,7 @@
         <a href="#">{{ replay.id }}</a>
       </h4>
       <h6 class="font-weight-bold mb-1">
-        ({{ replay.p1_loc }}) {{ replay.p1 }} vs ({{ replay.ps_loc }}) {{ replay.p2 }}
+        ({{ replay.p1_loc }}) {{ replay.p1 }} vs ({{ replay.p2_loc }}) {{ replay.p2 }}
       </h6>
       <p class="card-text">
       </p>
