--- a/templates/card.j2.html
+++ b/templates/card.j2.html
@@ -5,7 +5,7 @@
     /></a>
     <div class="card-body">
       <h4 class="card-title">
-        <a href="#">{{ replay.id }}</a>
+        <a href="/video/{{ replay.id }}">{{ replay.id }}</a>
       </h4>
       <h6 class="font-weight-bold mb-1">
         ({{ replay.p1_loc }}) {{ replay.p1 }} vs ({{ replay.p2_loc }}) {{ replay.p2 }}
