--- a/templates/search.j2.html
+++ b/templates/search.j2.html
@@ -8,6 +8,7 @@
       Characters will be searched for both players
     </small>
     {{ render_form_row([form.player_requested]) }}
+    {{ render_form_row([form.order_by]) }}
     {{ render_form_row([form.submit]) }}
   </div>
 </form>
