--- a/templates/card.j2.html
+++ b/templates/card.j2.html
@@ -8,6 +8,9 @@
         <a href="/video/{{ replay.id }}">{{ replay.id }}</a>
       </h4>
       <h6 class="font-weight-bold mb-1">
+        Replay Date: {{replay.date_replay}}
+      </h6>
+      <h6 class="font-weight-bold mb-1">
         ({{ replay.p1_loc }}) {{ replay.p1 }} vs ({{ replay.p2_loc }}) {{ replay.p2 }}
       </h6>
       <p class="card-text">
