--- a/templates/search.j2.html
+++ b/templates/search.j2.html
@@ -2,13 +2,20 @@
 <form action="/search" method="POST" class="form" role="form">
   <div class="input-group mb-3">
     {{ render_field(form.search) }}
+  </div>
+  <div class="input-group mb-3">
     {{ render_form_row([form.char1, form.char2]) }}
-
     <small id="CharacterHelp" class="text-muted">
       Characters will be searched for both players
     </small>
+  </div>
+  <div class="input-group mb-3">
     {{ render_form_row([form.player_requested]) }}
+  </div>
+  <div class="input-group mb-3">
     {{ render_form_row([form.order_by]) }}
+  </div>
+  <div class="input-group mb-3">
     {{ render_form_row([form.submit]) }}
   </div>
 </form>
