--- a/templates/base.j2.html
+++ b/templates/base.j2.html
@@ -25,6 +25,12 @@
       gtag("config", "UA-171247249-1");
     </script>
 
+    <script
+      data-ad-client="ca-pub-8776104054800875"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+
     <!-- Bootstrap CSS -->
     {{ bootstrap.load_css() }} {% endblock %}
 
