--- a/templates/base.j2.html
+++ b/templates/base.j2.html
@@ -62,6 +62,11 @@
                 <a href="http://twitter.com/glisignoli">@glisignoli</a>
               </p>
             </div>
+            <div class="row">
+              <h1>FAQ</h1>
+              <h4>Why are some thumbnails/videos missing?</h4>
+              <p>If the video was recently added, then it is probably still processing. Check back in a little while.</p>
+            </div>
           </div>
         </div>
 
