--- a/templates/dashboard.j2.html
+++ b/templates/dashboard.j2.html
@@ -41,6 +41,15 @@
     color: #818695;
   }
   </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171247249-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-171247249-1');
+</script>
 </head>
 
 <body class="dark-edition">
