--- a/templates/dashboard.j2.html
+++ b/templates/dashboard.j2.html
@@ -50,6 +50,7 @@
 
   gtag('config', 'UA-171247249-1');
 </script>
+<script data-ad-client="ca-pub-8776104054800875" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body class="dark-edition">
