Update to allow submissions

--- a/templates/card.j2.html
+++ b/templates/card.j2.html
@@ -1,4 +1,4 @@
-<div class="col-lg-4">
+<div class="col-lg-4 col-md-6">
   <div class="card">
     <a href="/video/{{ replay.id }}">
       <img class="card-img-top" src="https://archive.org/download/{{ replay.id.replace('@', '-') }}/__ia_thumb.jpg" alt=""/>
